--- a/config
+++ b/config
@@ -12,10 +12,10 @@ order += "load"
 order += "cpu_temperature 0"
 order += "disk /"
 order += "disk /home"
-order += "ethernet eno1"
-order += "wireless wlo1"
+/*order += "ethernet eno1"*/
+/*order += "wireless wlo1"*/
 order += "volume master"
-order += "battery 1"
+/*order += "battery 1"*/
 order += "memory"
 order += "tztime local"
 
